# suadoPygameTools

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py  todo.md
suadoPygameTools/: __init__.py
tests/cameraTest/: main.py
tests/randomGame/: main.py  test.py
